[tool.poetry]
name = "poetry-lock-check"
version = "0.1.0"
description = "Checks the lock on a poetry file"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.1.4"
cleo = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
